force-app/main/default/objects/Account/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>