force-app/main/default/objects/Account/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>This field will be used to show the unique Id coming from external system in case of Integration and data migration.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>