force-app/main/default/objects/Account/fields/Field_auto__c.field-meta.xml
<CustomField>
    <fullName>Field_auto__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Fieldauto</label>
    <type>AutoNumber</type>
</CustomField>