force-app/main/default/objects/Account/fields/test_TBD__c.field-meta.xml
<CustomField>
    <fullName>test_TBD__c</fullName>
    <label>test TBD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>