force-app/main/default/objects/Account/fields/User_Story_2_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Story_2_Field__c</fullName>
    <label>User Story 2 Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>