force-app/main/default/objects/Account/fields/User_Story_3_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Story_3_Field__c</fullName>
    <label>User Story 3 Field</label>
    <type>AutoNumber</type>
</CustomField>